<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agile Run/Jog/Walk Timer</string>
    <string name="add_run_btn">Add Run</string>
    <string name="add_jog_btn">Add Jog</string>
    <string name="add_walk_btn">Add Walk</string>
    <string name="add_workout_btn">Create New Workout</string>
    <string name="add_new_text">Use the buttons above to add items and begin designing your workout</string>
    <string name="title_activity_add_run">Add Run</string>
    <string name="title_activity_add_jog">Add Jog</string>
    <string name="title_activity_add_walk">Add Walk</string>
    <string name="title_activity_workout">Current Workout</string>
    <string name="title_activity_edit_run">Edit Run</string>
    <string name="title_activity_edit_jog">Edit Jog</string>
    <string name="title_activity_edit_walk">Edit Walk</string>
    
    
    
    <string name="saved_workouts_heading">Saved Workouts:</string>   
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete Workout</string>
    <string name="action_clear">Clear Excercises</string>
    <string name="start_btn_text">Start</string>
    <string name="cancel_btn">Cancel</string>
    <string name ="mins_text">Mins</string>
    <string name ="secs_text">Secs</string>
    <string name="title_activity_workout_timer">Run/Jog/Walk Session</string>
    
    <string name="remaining">REMAINING</string>
    <string name="total_duration">TOTAL</string>
    <string name="pause_btn_text">PAUSE</string>
    <string name="quit_btn_text">QUIT</string>
    <string name="resume_btn_text">RESUME</string>
    <string name="save_run_btn">Save Run</string>
    <string name="save_jog_btn">Save Jog</string>
    <string name="save_walk_btn">Save Walk</string>
    <string name="delete_btn">Delete</string>
    <string name="notification_title">Run/Jog/Walk Session</string>
    <string name="notification_text">Running</string>
    <string name="workout_finished">Workout Finished</string>
    <string name="close_btn_text">CLOSE</string>
    
    
    <string name="pref_audio">Use Audio Feedback</string>
    <string name="pref_vibrate">Use Phone Vibrate</string>
    <string name="pref_vibrate_duration">Vibrate Duration:</string>
    <string name="pref_screen_awake">Keep Screen Awake</string>
       
    <string-array name="pref_vibrate_duration_entries">
        <item>1 sec</item>
        <item>2 secs</item>
        <item>3 secs</item>
        <item>4 secs</item>
        <item>5 secs</item>
    </string-array>
    
    <string-array name="pref_vibrate_duration_values">
        <item>1 sec</item>
        <item>2 secs</item>
        <item>3 secs</item>
        <item>4 secs</item>
        <item>5 secs</item>        
    </string-array>
    

</resources>
