<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_audio"
        android:title="@string/pref_audio"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="pref_vibrate"
        android:title="@string/pref_vibrate"
        android:defaultValue="true" />
    <ListPreference
        android:key="pref_vibrate_duration"
        android:title="@string/pref_vibrate_duration"
        android:dialogTitle="@string/pref_vibrate_duration"
        android:entries="@array/pref_vibrate_duration_entries"
        android:entryValues="@array/pref_vibrate_duration_values"
        android:defaultValue="2"
        android:summary="2 secs" />
    <CheckBoxPreference
        android:key="pref_screen_awake"
        android:title="@string/pref_screen_awake"
        android:defaultValue="true" />
    
</PreferenceScreen>