<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
        android:orientation="vertical"
        android:padding="8dp"
        android:baselineAligned="false">
        

        
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:paddingBottom="10dp"
	         >
	           
		    <Button
		        android:id="@+id/runBtn"
		        android:text="@string/add_run_btn"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:onClick="onClick" 
		        android:layout_weight="32"/>	  
		    
		    <Button
		        android:id="@+id/jogBtn"
		        android:text="@string/add_jog_btn"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:onClick="onClick"
		        android:layout_weight="32" />	  
		           		    
		    <Button
		        android:id="@+id/walkBtn"
		        android:text="@string/add_walk_btn"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:onClick="onClick"
		        android:layout_weight="36" />	  
		           
	    
	    </LinearLayout>
	   
	      
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	           
		    <Button
		        android:id="@+id/startBtn"
		        android:text="@string/start_btn_text"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:onClick="onClick" 
		        android:layout_weight="45"
		        android:background="@drawable/green_button"
		        android:layout_marginLeft="4dp"
		        android:visibility="gone" />
		    
		    <Button
		        android:id="@+id/clearBtn"
		        android:text="@string/clear_btn_text"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:onClick="onClick"
		        android:layout_weight="45"
		        android:background="@drawable/red_button" 
		        android:layout_marginLeft="4dp"
		        android:visibility="gone"/>	  
		           		    
		  	  
		           
	    
	    </LinearLayout>
	    
	    <Button
	        android:id="@+id/deleteBtn"
	        android:text="@string/delete_btn_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="onClick" 
	        android:background="@drawable/red_button"
	        android:layout_marginBottom="8dp" />
	   
        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="5dp"
	        android:background="@drawable/black_rectangle"
	         >
	        
	        <TextView
		       android:id="@+id/workout_name"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:paddingTop="5dp"
		       android:textColor="#000000"
		       android:gravity="center_horizontal" />
	        
	        <TextView
	            android:id="@+id/total_duration_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="16sp" 
		        android:layout_gravity="center_horizontal"
		        android:visibility="gone"
		        android:paddingBottom="5dp"
		        />
	        
        </LinearLayout>
	        
	   
	        <TextView
	            android:id="@+id/add_new_text"
		        android:text="@string/add_new_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:paddingTop="15dp"/>
	        
	            <ListView
			        android:id="@android:id/list"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			         />
	            
		
	       
	    
</LinearLayout> 
	
    
	    
	
    
